# geood

./: .gitignore  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
src/geood/: __init__.py  detector.py  extraction.py  metrics.py  model_loader.py  result.py
tests/: test_api.py  test_detector.py  test_extraction.py  test_integration.py  test_metrics.py  test_model_loader.py  test_result.py  test_security.py  test_smoke.py
